Compilers/Lab/Assignment-6/Mukul reference/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    WHITESPACE
    COMMENT
    UNARY


State 320 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INTEGER_CONSTANT
    5                   | FLOATING_CONSTANT
    6                   | CHAR_CONST
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' argument_expression_list_opt ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression ARROW IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | '(' type_name ')' '{' initializer_list '}'
   17                   | '(' type_name ')' '{' initializer_list ',' '}'

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 argument_expression_list_opt: argument_expression_list
   21                             | %empty

   22 unary_expression: postfix_expression
   23                 | INCREMENT unary_expression
   24                 | DECREMENT unary_expression
   25                 | unary_operator cast_expression
   26                 | SIZEOF unary_expression
   27                 | SIZEOF '(' type_name ')'

   28 unary_operator: '&'
   29               | '*'
   30               | '+'
   31               | '-'
   32               | '~'
   33               | '!'

   34 cast_expression: unary_expression
   35                | '(' type_name ')' cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression '*' cast_expression
   38                          | multiplicative_expression '/' cast_expression
   39                          | multiplicative_expression '%' cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '+' multiplicative_expression
   42                    | additive_expression '-' multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression '<' shift_expression
   48                      | relational_expression '>' shift_expression
   49                      | relational_expression LESS_THAN_EQUAL shift_expression
   50                      | relational_expression GREATER_THAN_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUALITY relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 AND_expression: equality_expression
   55               | AND_expression '&' equality_expression

   56 exclusive_OR_expression: AND_expression
   57                        | exclusive_OR_expression '^' AND_expression

   58 inclusive_OR_expression: exclusive_OR_expression
   59                        | inclusive_OR_expression '|' exclusive_OR_expression

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   66 assignment_operator: '='
   67                    | MULTIPLY_EQUAL
   68                    | DIVIDE_EQUAL
   69                    | MOD_EQUAL
   70                    | PLUS_EQUAL
   71                    | MINUS_EQUAL
   72                    | LEFT_SHIFT_EQUAL
   73                    | RIGHT_SHIFT_EQUAL
   74                    | AND_EQUAL
   75                    | XOR_EQUAL
   76                    | OR_EQUAL

   77 assignment_expression: conditional_expression
   78                      | unary_expression assignment_operator assignment_expression

   79 constant_expression: conditional_expression

   80 expression: assignment_expression
   81           | expression ',' assignment_expression

   82 declaration: declaration_specifiers init_declarator_list_opt ';'

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | %empty

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE

  104 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  105                         | type_qualifier specifier_qualifier_list_opt

  106 specifier_qualifier_list_opt: specifier_qualifier_list
  107                             | %empty

  108 type_qualifier: CONST
  109               | RESTRICT
  110               | VOLATILE

  111 function_specifier: INLINE

  112 declarator: pointer_opt direct_declarator

  113 pointer_opt: pointer
  114            | %empty

  115 direct_declarator: IDENTIFIER
  116                  | '(' declarator ')'
  117                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  118                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  119                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  120                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  121                  | direct_declarator '(' parameter_type_list ')'
  122                  | direct_declarator '(' identifier_list_opt ')'

  123 type_qualifier_list_opt: type_qualifier_list
  124                        | %empty

  125 assignment_expression_opt: assignment_expression
  126                          | %empty

  127 identifier_list_opt: identifier_list
  128                    | %empty

  129 pointer: '*' type_qualifier_list_opt
  130        | '*' type_qualifier_list_opt pointer

  131 type_qualifier_list: type_qualifier
  132                    | type_qualifier_list type_qualifier

  133 parameter_type_list: parameter_list
  134                    | parameter_list ',' ELLIPSIS

  135 parameter_list: parameter_declaration
  136               | parameter_list ',' parameter_declaration

  137 parameter_declaration: declaration_specifiers declarator
  138                      | declaration_specifiers

  139 identifier_list: IDENTIFIER
  140                | identifier_list ',' IDENTIFIER

  141 type_name: specifier_qualifier_list

  142 initializer: assignment_expression
  143            | '{' initializer_list '}'
  144            | '{' initializer_list ',' '}'

  145 initializer_list: designation_opt initializer
  146                 | initializer_list ',' designation_opt initializer

  147 designation_opt: designation
  148                | %empty

  149 designation: designator_list '='

  150 designator_list: designator
  151                | designator_list designator

  152 designator: '[' constant_expression ']'
  153           | '.' IDENTIFIER

  154 statement: labeled_statement
  155          | compound_statement
  156          | expression_statement
  157          | selection_statement
  158          | iteration_statement
  159          | jump_statement

  160 labeled_statement: IDENTIFIER ':' statement
  161                  | CASE constant_expression ':' statement
  162                  | DEFAULT ':' statement

  163 compound_statement: '{' block_item_list_opt '}'

  164 block_item_list_opt: block_item_list
  165                    | %empty

  166 block_item_list: block_item
  167                | block_item_list M block_item

  168 block_item: declaration
  169           | statement

  170 expression_statement: expression_opt ';'

  171 expression_opt: expression
  172               | %empty

  173 selection_statement: IF '(' expression N ')' M statement N ELSE M statement
  174                    | IF '(' expression N ')' M statement
  175                    | SWITCH '(' expression ')' statement

  176 iteration_statement: WHILE '(' M expression N ')' M statement
  177                    | DO M statement WHILE '(' M expression N ')' ';'
  178                    | FOR '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  179                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  180 jump_statement: GOTO IDENTIFIER ';'
  181               | CONTINUE ';'
  182               | BREAK ';'
  183               | RETURN expression_opt ';'

  184 translation_unit: external_declaration
  185                 | translation_unit external_declaration

  186 external_declaration: function_definition
  187                     | declaration

  188 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  189 declaration_list_opt: declaration_list
  190                     | %empty

  191 declaration_list: declaration
  192                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 33
    '%' (37) 39
    '&' (38) 28 55
    '(' (40) 8 11 16 17 27 35 116 121 122 173 174 175 176 177 178 179
    ')' (41) 8 11 16 17 27 35 116 121 122 173 174 175 176 177 178 179
    '*' (42) 29 37 120 129 130
    '+' (43) 30 41
    ',' (44) 17 19 81 92 134 136 140 144 146
    '-' (45) 31 42
    '.' (46) 12 153
    '/' (47) 38
    ':' (58) 65 160 161 162
    ';' (59) 82 170 177 178 179 180 181 182 183
    '<' (60) 47
    '=' (61) 66 94 149
    '>' (62) 48
    '?' (63) 65
    '[' (91) 10 117 118 119 120 152
    ']' (93) 10 117 118 119 120 152
    '^' (94) 57
    '{' (123) 16 17 143 144 163
    '|' (124) 59
    '}' (125) 16 17 143 144 163
    '~' (126) 32
    error (256)
    BREAK (258) 182
    CASE (259) 161
    CHAR (260) 98
    CONST (261) 108
    CONTINUE (262) 181
    DEFAULT (263) 162
    DO (264) 177
    DOUBLE (265) 103
    ELSE (266) 173
    EXTERN (267) 95
    FLOAT (268) 102
    FOR (269) 178 179
    GOTO (270) 180
    IF (271) 173 174
    INLINE (272) 111
    INT (273) 100
    LONG (274) 101
    RESTRICT (275) 109
    RETURN (276) 183
    SHORT (277) 99
    SIZEOF (278) 26 27
    STATIC (279) 96 118 119
    STRUCT (280)
    SWITCH (281) 175
    TYPEDEF (282)
    UNION (283)
    VOID (284) 97
    VOLATILE (285) 110
    WHILE (286) 176 177
    ARROW (287) 13
    DECREMENT (288) 15 24
    INCREMENT (289) 14 23
    RIGHT_SHIFT (290) 45
    LEFT_SHIFT (291) 44
    GREATER_THAN_EQUAL (292) 50
    LESS_THAN_EQUAL (293) 49
    NOT_EQUAL (294) 53
    EQUALITY (295) 52
    OR (296) 63
    AND (297) 61
    ELLIPSIS (298) 134
    PLUS_EQUAL (299) 70
    MINUS_EQUAL (300) 71
    MULTIPLY_EQUAL (301) 67
    MOD_EQUAL (302) 69
    DIVIDE_EQUAL (303) 68
    AND_EQUAL (304) 74
    OR_EQUAL (305) 76
    XOR_EQUAL (306) 75
    RIGHT_SHIFT_EQUAL (307) 73
    LEFT_SHIFT_EQUAL (308) 72
    WHITESPACE (309)
    COMMENT (310)
    INTEGER_CONSTANT <_int_value> (311) 4
    FLOATING_CONSTANT <_float_value> (312) 5
    CHAR_CONST <_char_value> (313) 6
    STRING_LITERAL <_string_literal> (314) 7
    IDENTIFIER <_identifier> (315) 3 12 13 115 139 140 153 160 180
    UNARY (316)
    IF_CONFLICT (317)


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    M <_instruction> (88)
        on left: 1
        on right: 61 63 65 167 173 174 176 177 178
    N <_nextlist> (89)
        on left: 2
        on right: 65 173 174 176 177 178
    primary_expression <_expression> (90)
        on left: 3 4 5 6 7 8
        on right: 9
    postfix_expression <_expression> (91)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 10 11 12 13 14 15 22
    argument_expression_list <_paramList> (92)
        on left: 18 19
        on right: 19 20
    argument_expression_list_opt <_paramList> (93)
        on left: 20 21
        on right: 11
    unary_expression <_expression> (94)
        on left: 22 23 24 25 26 27
        on right: 23 24 26 34 78
    unary_operator <_char_value> (95)
        on left: 28 29 30 31 32 33
        on right: 25
    cast_expression <_expression> (96)
        on left: 34 35
        on right: 25 35 36 37 38 39
    multiplicative_expression <_expression> (97)
        on left: 36 37 38 39
        on right: 37 38 39 40 41 42
    additive_expression <_expression> (98)
        on left: 40 41 42
        on right: 41 42 43 44 45
    shift_expression <_expression> (99)
        on left: 43 44 45
        on right: 44 45 46 47 48 49 50
    relational_expression <_expression> (100)
        on left: 46 47 48 49 50
        on right: 47 48 49 50 51 52 53
    equality_expression <_expression> (101)
        on left: 51 52 53
        on right: 52 53 54 55
    AND_expression <_expression> (102)
        on left: 54 55
        on right: 55 56 57
    exclusive_OR_expression <_expression> (103)
        on left: 56 57
        on right: 57 58 59
    inclusive_OR_expression <_expression> (104)
        on left: 58 59
        on right: 59 60 61
    logical_AND_expression <_expression> (105)
        on left: 60 61
        on right: 61 62 63
    logical_OR_expression <_expression> (106)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <_expression> (107)
        on left: 64 65
        on right: 65 77 79
    assignment_operator (108)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 78
    assignment_expression <_expression> (109)
        on left: 77 78
        on right: 18 19 78 80 81 118 119 125 142
    constant_expression <_expression> (110)
        on left: 79
        on right: 152 161
    expression <_expression> (111)
        on left: 80 81
        on right: 8 10 65 81 171 173 174 175 176 177
    declaration <_expression> (112)
        on left: 82
        on right: 168 179 187 191 192
    init_declarator_list_opt <_expression> (113)
        on left: 83 84
        on right: 82
    declaration_specifiers <_declarator> (114)
        on left: 85 86 87 88
        on right: 82 89 137 138 188
    declaration_specifiers_opt (115)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list <_expression> (116)
        on left: 91 92
        on right: 83 92
    init_declarator <_expression> (117)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (118)
        on left: 95 96
        on right: 85
    type_specifier <_declarator> (119)
        on left: 97 98 99 100 101 102 103
        on right: 86 104
    specifier_qualifier_list <_declarator> (120)
        on left: 104 105
        on right: 106 141
    specifier_qualifier_list_opt (121)
        on left: 106 107
        on right: 104 105
    type_qualifier (122)
        on left: 108 109 110
        on right: 87 105 131 132
    function_specifier (123)
        on left: 111
        on right: 88
    declarator <_expression> (124)
        on left: 112
        on right: 93 94 116 137 188
    pointer_opt <_declarator> (125)
        on left: 113 114
        on right: 112
    direct_declarator <_expression> (126)
        on left: 115 116 117 118 119 120 121 122
        on right: 112 117 118 119 120 121 122
    type_qualifier_list_opt (127)
        on left: 123 124
        on right: 117 118 120 129 130
    assignment_expression_opt <_expression> (128)
        on left: 125 126
        on right: 117
    identifier_list_opt (129)
        on left: 127 128
        on right: 122
    pointer <_declarator> (130)
        on left: 129 130
        on right: 113 130
    type_qualifier_list (131)
        on left: 131 132
        on right: 119 123 132
    parameter_type_list (132)
        on left: 133 134
        on right: 121
    parameter_list (133)
        on left: 135 136
        on right: 133 134 136
    parameter_declaration (134)
        on left: 137 138
        on right: 135 136
    identifier_list (135)
        on left: 139 140
        on right: 127 140
    type_name <_declarator> (136)
        on left: 141
        on right: 16 17 27 35
    initializer <_expression> (137)
        on left: 142 143 144
        on right: 94 145 146
    initializer_list (138)
        on left: 145 146
        on right: 16 17 143 144 146
    designation_opt (139)
        on left: 147 148
        on right: 145 146
    designation (140)
        on left: 149
        on right: 147
    designator_list (141)
        on left: 150 151
        on right: 149 151
    designator (142)
        on left: 152 153
        on right: 150 151
    statement <_nextlist> (143)
        on left: 154 155 156 157 158 159
        on right: 160 161 162 169 173 174 175 176 177 178 179
    labeled_statement <_nextlist> (144)
        on left: 160 161 162
        on right: 154
    compound_statement <_nextlist> (145)
        on left: 163
        on right: 155 188
    block_item_list_opt <_nextlist> (146)
        on left: 164 165
        on right: 163
    block_item_list <_nextlist> (147)
        on left: 166 167
        on right: 164 167
    block_item <_nextlist> (148)
        on left: 168 169
        on right: 166 167
    expression_statement <_expression> (149)
        on left: 170
        on right: 156
    expression_opt <_expression> (150)
        on left: 171 172
        on right: 170 178 179 183
    selection_statement <_nextlist> (151)
        on left: 173 174 175
        on right: 157
    iteration_statement <_nextlist> (152)
        on left: 176 177 178 179
        on right: 158
    jump_statement <_nextlist> (153)
        on left: 180 181 182 183
        on right: 159
    translation_unit (154)
        on left: 184 185
        on right: 0 185
    external_declaration (155)
        on left: 186 187
        on right: 184 185
    function_definition (156)
        on left: 188
        on right: 186
    declaration_list_opt (157)
        on left: 189 190
        on right: 188
    declaration_list (158)
        on left: 191 192
        on right: 189 192


State 0

    0 $accept: • translation_unit $end

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22


State 1

   98 type_specifier: CHAR •

    $default  reduce using rule 98 (type_specifier)


State 2

  108 type_qualifier: CONST •

    $default  reduce using rule 108 (type_qualifier)


State 3

  103 type_specifier: DOUBLE •

    $default  reduce using rule 103 (type_specifier)


State 4

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 5

  102 type_specifier: FLOAT •

    $default  reduce using rule 102 (type_specifier)


State 6

  111 function_specifier: INLINE •

    $default  reduce using rule 111 (function_specifier)


State 7

  100 type_specifier: INT •

    $default  reduce using rule 100 (type_specifier)


State 8

  101 type_specifier: LONG •

    $default  reduce using rule 101 (type_specifier)


State 9

  109 type_qualifier: RESTRICT •

    $default  reduce using rule 109 (type_qualifier)


State 10

   99 type_specifier: SHORT •

    $default  reduce using rule 99 (type_specifier)


State 11

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 12

   97 type_specifier: VOID •

    $default  reduce using rule 97 (type_specifier)


State 13

  110 type_qualifier: VOLATILE •

    $default  reduce using rule 110 (type_qualifier)


State 14

  187 external_declaration: declaration •

    $default  reduce using rule 187 (external_declaration)


State 15

   82 declaration: declaration_specifiers • init_declarator_list_opt ';'
  188 function_definition: declaration_specifiers • declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 23

    ';'       reduce using rule 84 (init_declarator_list_opt)
    $default  reduce using rule 114 (pointer_opt)

    init_declarator_list_opt  go to state 24
    init_declarator_list      go to state 25
    init_declarator           go to state 26
    declarator                go to state 27
    pointer_opt               go to state 28
    pointer                   go to state 29


State 16

   85 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 30
    declaration_specifiers_opt  go to state 31
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 17

   86 declaration_specifiers: type_specifier • declaration_specifiers_opt

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 30
    declaration_specifiers_opt  go to state 32
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 18

   87 declaration_specifiers: type_qualifier • declaration_specifiers_opt

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 30
    declaration_specifiers_opt  go to state 33
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 19

   88 declaration_specifiers: function_specifier • declaration_specifiers_opt

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 30
    declaration_specifiers_opt  go to state 34
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 20

    0 $accept: translation_unit • $end
  185 translation_unit: translation_unit • external_declaration

    $end      shift, and go to state 35
    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    external_declaration     go to state 36
    function_definition      go to state 22


State 21

  184 translation_unit: external_declaration •

    $default  reduce using rule 184 (translation_unit)


State 22

  186 external_declaration: function_definition •

    $default  reduce using rule 186 (external_declaration)


State 23

  129 pointer: '*' • type_qualifier_list_opt
  130        | '*' • type_qualifier_list_opt pointer

    CONST     shift, and go to state 2
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 124 (type_qualifier_list_opt)

    type_qualifier           go to state 37
    type_qualifier_list_opt  go to state 38
    type_qualifier_list      go to state 39


State 24

   82 declaration: declaration_specifiers init_declarator_list_opt • ';'

    ';'  shift, and go to state 40


State 25

   83 init_declarator_list_opt: init_declarator_list •
   92 init_declarator_list: init_declarator_list • ',' init_declarator

    ','  shift, and go to state 41

    $default  reduce using rule 83 (init_declarator_list_opt)


State 26

   91 init_declarator_list: init_declarator •

    $default  reduce using rule 91 (init_declarator_list)


State 27

   93 init_declarator: declarator •
   94                | declarator • '=' initializer
  188 function_definition: declaration_specifiers declarator • declaration_list_opt compound_statement

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13
    '='       shift, and go to state 42

    '{'       reduce using rule 190 (declaration_list_opt)
    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 43
    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    declaration_list_opt     go to state 45
    declaration_list         go to state 46


State 28

  112 declarator: pointer_opt • direct_declarator

    IDENTIFIER  shift, and go to state 47
    '('         shift, and go to state 48

    direct_declarator  go to state 49


State 29

  113 pointer_opt: pointer •

    $default  reduce using rule 113 (pointer_opt)


State 30

   89 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 89 (declaration_specifiers_opt)


State 31

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt •

    $default  reduce using rule 85 (declaration_specifiers)


State 32

   86 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 86 (declaration_specifiers)


State 33

   87 declaration_specifiers: type_qualifier declaration_specifiers_opt •

    $default  reduce using rule 87 (declaration_specifiers)


State 34

   88 declaration_specifiers: function_specifier declaration_specifiers_opt •

    $default  reduce using rule 88 (declaration_specifiers)


State 35

    0 $accept: translation_unit $end •

    $default  accept


State 36

  185 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 185 (translation_unit)


State 37

  131 type_qualifier_list: type_qualifier •

    $default  reduce using rule 131 (type_qualifier_list)


State 38

  129 pointer: '*' type_qualifier_list_opt •
  130        | '*' type_qualifier_list_opt • pointer

    '*'  shift, and go to state 23

    $default  reduce using rule 129 (pointer)

    pointer  go to state 50


State 39

  123 type_qualifier_list_opt: type_qualifier_list •
  132 type_qualifier_list: type_qualifier_list • type_qualifier

    CONST     shift, and go to state 2
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 123 (type_qualifier_list_opt)

    type_qualifier  go to state 51


State 40

   82 declaration: declaration_specifiers init_declarator_list_opt ';' •

    $default  reduce using rule 82 (declaration)


State 41

   92 init_declarator_list: init_declarator_list ',' • init_declarator

    '*'  shift, and go to state 23

    $default  reduce using rule 114 (pointer_opt)

    init_declarator  go to state 52
    declarator       go to state 53
    pointer_opt      go to state 28
    pointer          go to state 29


State 42

   94 init_declarator: declarator '=' • initializer

    SIZEOF             shift, and go to state 54
    DECREMENT          shift, and go to state 55
    INCREMENT          shift, and go to state 56
    INTEGER_CONSTANT   shift, and go to state 57
    FLOATING_CONSTANT  shift, and go to state 58
    CHAR_CONST         shift, and go to state 59
    STRING_LITERAL     shift, and go to state 60
    IDENTIFIER         shift, and go to state 61
    '+'                shift, and go to state 62
    '-'                shift, and go to state 63
    '*'                shift, and go to state 64
    '('                shift, and go to state 65
    '{'                shift, and go to state 66
    '&'                shift, and go to state 67
    '~'                shift, and go to state 68
    '!'                shift, and go to state 69

    primary_expression         go to state 70
    postfix_expression         go to state 71
    unary_expression           go to state 72
    unary_operator             go to state 73
    cast_expression            go to state 74
    multiplicative_expression  go to state 75
    additive_expression        go to state 76
    shift_expression           go to state 77
    relational_expression      go to state 78
    equality_expression        go to state 79
    AND_expression             go to state 80
    exclusive_OR_expression    go to state 81
    inclusive_OR_expression    go to state 82
    logical_AND_expression     go to state 83
    logical_OR_expression      go to state 84
    conditional_expression     go to state 85
    assignment_expression      go to state 86
    initializer                go to state 87


State 43

  191 declaration_list: declaration •

    $default  reduce using rule 191 (declaration_list)


State 44

   82 declaration: declaration_specifiers • init_declarator_list_opt ';'

    '*'  shift, and go to state 23

    ';'       reduce using rule 84 (init_declarator_list_opt)
    $default  reduce using rule 114 (pointer_opt)

    init_declarator_list_opt  go to state 24
    init_declarator_list      go to state 25
    init_declarator           go to state 26
    declarator                go to state 53
    pointer_opt               go to state 28
    pointer                   go to state 29


State 45

  188 function_definition: declaration_specifiers declarator declaration_list_opt • compound_statement

    '{'  shift, and go to state 88

    compound_statement  go to state 89


State 46

  189 declaration_list_opt: declaration_list •
  192 declaration_list: declaration_list • declaration

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    EXTERN    shift, and go to state 4
    FLOAT     shift, and go to state 5
    INLINE    shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    RESTRICT  shift, and go to state 9
    SHORT     shift, and go to state 10
    STATIC    shift, and go to state 11
    VOID      shift, and go to state 12
    VOLATILE  shift, and go to state 13

    $default  reduce using rule 189 (declaration_list_opt)

    declaration              go to state 90
    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 47

  115 direct_declarator: IDENTIFIER •

    $default  reduce using rule 115 (direct_declarator)


State 48

  116 direct_declarator: '(' • declarator ')'

    '*'  shift, and go to state 23

    $default  reduce using rule 114 (pointer_opt)

    declarator   go to state 91
    pointer_opt  go to state 28
    pointer      go to state 29


State 49

  112 declarator: pointer_opt direct_declarator •
  117 direct_declarator: direct_declarator • '[' type_qualifier_list_opt assignment_expression_opt ']'
  118                  | direct_declarator • '[' STATIC type_qualifier_list_opt assignment_expression ']'
  119                  | direct_declarator • '[' type_qualifier_list STATIC assignment_expression ']'
  120                  | direct_declarator • '[' type_qualifier_list_opt '*' ']'
  121                  | direct_declarator • '(' parameter_type_list ')'
  122                  | direct_declarator • '(' identifier_list_opt ')'

    '('  shift, and go to state 92
    '['  shift, and go to state 93

    $default  reduce using rule 112 (declarator)


State 50

  130 pointer: '*' type_qualifier_list_opt pointer •

    $default  reduce using rule 130 (pointer)


State 51

  132 type_qualifier_list: type_qualifier_list type_qualifier •

    $default  reduce using rule 132 (type_qualifier_list)


State 52

   92 init_declarator_list: init_declarator_list ',' init_declarator •

    $default  reduce using rule 92 (init_declarator_list)


State 53

   93 init_declarator: declarator •
   94                | declarator • '=' initializer

    '='  shift, and go to state 42

    $default  reduce using rule 93 (init_declarator)


State 54

   26 unary_expression: SIZEOF • unary_expression
   27                 | SIZEOF • '(' type_name ')'

    SIZEOF             shift, and go to state 54
    DECREMENT          shift, and go to state 55
    INCREMENT          shift, and go to state 56
    INTEGER_CONSTANT   shift, and go to state 57
    FLOATING_CONSTANT  shift, and go to state 58
    CHAR_CONST         shift, and go to state 59
    STRING_LITERAL     shift, and go to state 60
    IDENTIFIER         shift, and go to state 61
    '+'                shift, and go to state 62
    '-'                shift, and go to state 63
    '*'                shift, and go to state 64
    '('                shift, and go to state 94
    '&'                shift, and go to state 67
    '~'                shift, and go to state 68
    '!'                shift, and go to state 69

    primary_expression  go to state 70
    postfix_expression  go to state 71
    unary_expression    go to state 95
    unary_operator      go to state 73


State 55

   24 unary_expression: DECREMENT • unary_expression

    SIZEOF             shift, and go to state 54
    DECREMENT          shift, and go to state 55
    INCREMENT          shift, and go to state 56
    INTEGER_CONSTANT   shift, and go to state 57
    FLOATING_CONSTANT  shift, and go to state 58
    CHAR_CONST         shift, and go to state 59
    STRING_LITERAL     shift, and go to state 60
    IDENTIFIER         shift, and go to state 61
    '+'                shift, and go to state 62
    '-'                shift, and go to state 63
    '*'                shift, and go to state 64
    '('                shift, and go to state 96
    '&'                shift, and go to state 67
    '~'                shift, and go to state 68
    '!'                shift, and go to state 69
